@@ -4,6 +4,7 @@ ChangeLog for pommed
 version 1.11:
 	- pommed: beep on volume change, now that we have the audio code
 	in pommed itself.
+	- gpomme: remove audio-related code.
 
 version 1.10:
 	- pommed: add a beeper feature as a substitute to the missing PC
